--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
     "start": "node server.js"
   },
   "author": "Kevin Gonzalez",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.8",
+    "express": "^4.16.3",
+    "mongoose": "^5.0.12",
+    "passport": "^0.4.0"
+  }
 }
