--- a/package.json
+++ b/package.json
@@ -13,7 +13,16 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongoose": "^5.0.12",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "nodemailer": "^4.6.3",
+    "passport-local": "^1.0.0",
+    "bcrypt-nodejs": "0.0.3",
+    "crypto": "^1.0.1",
+    "connect-flash": "^0.1.1",
+    "express-flash": "0.0.2",
+    "async": "^2.6.0",
+    "morgan": "^1.9.0"
   }
 }
